<resources>
    <string name="app_name">.Contacts</string>
    <string name="general_displayClear"></string>
    <string name="registration_welcomeMessage">Hello.</string>
    <string name="registration_firstName">First Name</string>
    <string name="registration_lastName">Last Name</string>
    <string name="registration_phone">Phone Number</string>
    <string name="registration_register">Join</string>
    <string name="notaphone_sorry">Sorry!</string>
    <string name="notaphone_message">
        Your device does not seem to support telephony.\n\n
        Currently, these devices are unsupported.
    </string>
    <string name="postregistrationloading_displayDefault">Starting to work...</string>
    <string name="postregistrationloading_gettingSMS">Awaiting SMS...</string>
    <string name="postregistrationloading_registering">SMS received, registering...</string>
    <string name="postregistrationloading_uploading">Logging in...</string>
    <string name="login_loggingIn">Logging in...</string>
    <string name="login_verifyingAppID">Verifying AppID...</string>
    <string name="login_processingcontacts">Processing Contacts...</string>
    <string name="login_uploadingcontacts">Uploading contacts...</string>
    <!-- TODO: Remove or change this placeholder text 
     -->
     
    <string name="lookup_phoneNumber">Phone Number</string>
    <string name="refresh">Refresh</string>

    <string name="settings_chatEnabled">Enable Chat</string>
    <string name="settings_hideInfo">Hide Information</string>
    <string name="about_text">.Contacts

        \n\nA cloud contact managing application.

        \n\ngithub.com/karimhasebou &amp; github.com/skyus
    
        \n\nSpecial thanks to github.com/ahmedbaracat</string>
    <string name="overflowmenu_settings">Settings</string>


    <string-array name="CountryCodes">
        <item>1,United States/Canada</item>
        <item>20,Egypt</item>
        <item>44,United Kingdom</item>
    </string-array>
    
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
