<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="potato.skyus.dotcontacts.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <Switch
            android:text="@string/settings_chatEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_chat"
            android:layout_margin="20dp" />

        <Switch
            android:text="@string/settings_hideInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_privacy"
            android:layout_margin="20dp" />

        <TextView
            android:text="@string/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
