<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_welcomeMessage"
            android:id="@+id/registration_welcomeMessage"
            android:fontFamily="sans-serif-thin"
            android:layout_gravity="center_horizontal"
            android:textSize="64sp"
            android:layout_weight="0.5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registration_logo"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.20">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registration_firstName"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/registration_firstName" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registration_lastName"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/registration_lastName" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/registration_spinner"
            android:spinnerMode="dialog"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.20">

            <TextView
                android:layout_width="wrap_content"
                android:text="####"
                android:layout_height="wrap_content"
                android:id="@+id/registration_phonecodedisplay"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/registration_phone"
                android:maxLines="1"
                android:hint="@string/registration_phone" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.20" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_register"
            android:id="@+id/registration_register"
            android:layout_weight="0.5"
            style="?android:attr/borderlessButtonStyle"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:textSize="32sp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:onClick="onClick_register"/>
    </LinearLayout>

</RelativeLayout>
